crates/smart-config/tests/ui/derives/flattened_config_with_alias.stderr
error: aliases for nested / flattened configs are not supported yet
  --> tests/ui/derives/flattened_config_with_alias.rs:10:30
   |
10 |     #[config(alias = "flat", flatten)]
   |                              ^^^^^^^
