crates/smart-config/tests/ui/derives/flattened_config_with_alias.rs
use smart_config::DescribeConfig;

#[derive(DescribeConfig)]
struct NestedConfig {
    field: u64,
}

#[derive(DescribeConfig)]
struct TestConfig {
    #[config(alias = "flat", flatten)]
    bogus: NestedConfig,
}

fn main() {}
